--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -61,6 +61,7 @@
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_weight">1</item>
+        <item name="android:gravity">center</item>
         <item name="android:textSize">@dimen/conv_text_big</item>
         <item name="fontPath">fonts/RobotoCondensed-Regular.ttf</item>
 
