--- a/app/src/main/res/layout/item_recommended.xml
+++ b/app/src/main/res/layout/item_recommended.xml
@@ -1,12 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_margin="7dp"
-    android:padding="10dp"
-    android:orientation="horizontal"
-    android:background="@android:color/white">
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/cvRoot"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/cell_margin"
+        android:layout_marginRight="@dimen/cell_margin"
+        android:layout_marginTop="@dimen/cell_margin"
+        android:clickable="true"
+        card_view:cardCornerRadius="@dimen/card_corner_radius"
+        card_view:cardElevation="@dimen/card_elevation">
+
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_margin="7dp"
+        android:padding="10dp"
+        android:orientation="horizontal"
+        android:background="@android:color/white">
 
     <ImageView
         android:layout_width="50dp"
@@ -23,7 +35,6 @@
         style="@style/RecommendedText.Title"
         android:padding="10dp"
         tools:text="this is a sample long title"
-        android:layout_alignBottom="@+id/ivImageType"
         android:layout_alignTop="@+id/ivImageType"
         android:layout_toRightOf="@+id/ivImageType"
         android:layout_toEndOf="@+id/ivImageType" />
@@ -47,9 +58,9 @@
         android:ellipsize="end"
         tools:text="this is a sample long summary, well, not that long."
         android:layout_below="@+id/tvTitle"
-        android:layout_alignLeft="@+id/tvTitle"
-        android:layout_alignStart="@+id/tvTitle" />
+        android:layout_toRightOf="@+id/ivImageType"
+        android:layout_toLeftOf="@+id/ivLink"/>
 
-
-</RelativeLayout>
+    </RelativeLayout>
+</android.support.v7.widget.CardView>
 
