--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -161,6 +161,8 @@
 
     <style name="RecommendedText" parent="conv_card_sections_body">
         <item name="android:textColor">@color/colorPrimaryText</item>
+        <item name="android:paddingRight">5dp</item>
+        <item name="android:paddingLeft">5dp</item>
     </style>
 
     <style name="RecommendedText.Title" parent="RecommendedText">
