--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -240,22 +240,23 @@
     </style>
 
     <!-- Event List page -->
-    <style name="EventList.EventName" parent="">
-        <item name="android:layout_width">0dp</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_weight">1</item>
-        <item name="android:textSize">18sp</item>
-        <item name="fontPath">fonts/RobotoCondensed-Regular.ttf</item>
-        <item name="android:textColor">@color/colorPrimaryText</item>
-        <item name="android:textStyle">bold</item>
-    </style>
 
     <style name="EventList.Date" parent="">
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_weight">1</item>
         <item name="android:textSize">@dimen/conv_text_big</item>
-        <item name="fontPath">fonts/RobotoCondensed-Light.ttf</item>
+        <item name="fontPath">fonts/RobotoCondensed.ttf</item>
+        <item name="android:textColor">@color/colorPrimaryText</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="EventList.EventName" parent="">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:textSize">22dp</item>
+        <item name="fontPath">fonts/RobotoCondensed.ttf</item>
         <item name="android:textColor">@color/colorPrimaryText</item>
         <item name="android:textStyle">italic</item>
     </style>
