--- a/app/src/main/res/layout/fragment_event_detail.xml
+++ b/app/src/main/res/layout/fragment_event_detail.xml
@@ -8,7 +8,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         style="@style/EventDetailLayout"
-        android:background="@android:color/white">
+        android:background="@android:color/white"
+        android:padding="0dp">
 
         <ImageView
             android:id="@+id/ivImage"
@@ -28,15 +29,16 @@
                 android:layout_below="@+id/ivImage"/>
 
         <ImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
             android:id="@+id/ivLink"
             android:tint="@color/colorAccent"
             android:contentDescription="@string/type"
             android:src="@drawable/ic_link_black_48px"
             android:layout_below="@+id/ivImage"
             android:layout_alignTop="@+id/tvGroupName"
-            android:layout_alignParentRight="true"/>
+            android:layout_alignParentRight="true"
+            android:paddingRight="10dp"/>
 
         <TextView
                 android:id="@+id/tvEventName"
