--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -241,23 +241,23 @@
 
     <!-- Event List page -->
 
-    <style name="EventList.Date" parent="">
+    <style name="EventList.Text" parent="">
+        <item name="android:padding">10dp</item>
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_weight">1</item>
-        <item name="android:textSize">@dimen/conv_text_big</item>
         <item name="fontPath">fonts/RobotoCondensed.ttf</item>
         <item name="android:textColor">@color/colorPrimaryText</item>
+    </style>
+
+    <style name="EventList.Date" parent="EventList.Text">
+        <item name="android:textSize">@dimen/conv_text_big</item>
+
         <item name="android:textStyle">bold</item>
     </style>
 
-    <style name="EventList.EventName" parent="">
-        <item name="android:layout_width">0dp</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_weight">1</item>
+    <style name="EventList.EventName" parent="EventList.Text">
         <item name="android:textSize">22dp</item>
-        <item name="fontPath">fonts/RobotoCondensed.ttf</item>
-        <item name="android:textColor">@color/colorPrimaryText</item>
         <item name="android:textStyle">italic</item>
     </style>
 
@@ -274,6 +274,7 @@
         <item name="android:textSize">@dimen/conv_text_big</item>
         <item name="fontPath">fonts/RobotoCondensed-Regular.ttf</item>
         <item name="android:textColor">@color/colorPrimaryText</item>
+        <item name="android:padding">10dp</item>
     </style>
 
     <style name="EventDetail.EventName" parent="">
