--- a/app/src/main/res/layout/item_chat_user.xml
+++ b/app/src/main/res/layout/item_chat_user.xml
@@ -26,7 +26,8 @@
         android:text=""
         android:layout_alignParentTop="true"
         android:layout_toRightOf="@+id/ivProfileImage"
-        android:layout_toEndOf="@+id/ivProfileImage"/>
+        android:layout_toEndOf="@+id/ivProfileImage"
+        style="@style/RobotoMedium"/>
 
     <TextView
         android:id="@+id/tvDescription"
@@ -37,7 +38,8 @@
         android:layout_toLeftOf="@+id/ivUserType"
         android:gravity="top"
         tools:text="A parent that is trying to work with adopted children"
-        android:text=""/>
+        android:text=""
+        style="@style/RobotoLight"/>
 
     <ImageView
         android:layout_width="40dp"
@@ -46,5 +48,6 @@
         tools:src="@drawable/service_provider"
         android:layout_alignTop="@+id/tvUserName"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"/>
+        android:layout_alignParentEnd="true"
+        android:layout_marginLeft="6dp"/>
 </RelativeLayout>
