--- a/app/src/main/res/drawable/rounded_button.xml
+++ b/app/src/main/res/drawable/rounded_button.xml
@@ -12,6 +12,13 @@
             <solid android:color="@color/accent"/>
         </shape>
     </item>
+    <item android:state_enabled="false">
+        <shape android:shape="rectangle"  >
+            <corners android:radius="3dip" />
+            <solid android:color="@color/colorAccentDisabled"/>
+        </shape>
+    </item>
+
     <item >
         <shape android:shape="rectangle"  >
             <corners android:radius="3dip" />
