--- a/app/src/main/res/layout/fragment_chat_tabs.xml
+++ b/app/src/main/res/layout/fragment_chat_tabs.xml
@@ -6,9 +6,14 @@
 
     <com.astuetz.PagerSlidingTabStrip
         android:id="@+id/tabs"
-        app:pstsShouldExpand="true"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/tabstrip_height" />
+        android:layout_height="@dimen/tabstrip_height"
+        app:pstsShouldExpand="true"
+        app:pstsTabBackground="@color/colorPrimary"
+        app:pstsIndicatorColor="@color/colorPrimaryDark"
+        app:pstsTabTextColor="@android:color/white"
+        app:pstsIndicatorHeight="4dp"
+        />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager"
