--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -1,58 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/white"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@android:color/white"
     app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
     <ListView
         android:id="@+id/lvChat"
-        android:transcriptMode="alwaysScroll"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:layout_marginTop="8dp"
         android:divider="@null"
-        android:layout_above="@+id/llSend"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent" />
+        android:transcriptMode="alwaysScroll"/>
 
     <RelativeLayout
         android:id="@+id/llSend"
-        android:layout_alignParentBottom="true"
         android:layout_width="match_parent"
-        android:paddingTop="5dp"
+        android:layout_height="80dp"
+        android:layout_alignParentBottom="true"
         android:paddingBottom="10dp"
         android:paddingLeft="0dp"
         android:paddingRight="0dp"
-        android:layout_height="wrap_content" >
+        android:paddingTop="5dp">
 
-    <Button
-        android:id="@+id/btSend"
-        android:gravity="center"
-        android:textSize="18sp"
-        android:layout_alignParentRight="true"
-        android:layout_width="wrap_content"
-        style="@style/button_standard"
-        android:text="@string/send"
-        android:layout_height="wrap_content"/>
-    <EditText
-        android:id="@+id/etMessage"
-        android:layout_toLeftOf="@id/btSend"
-        android:layout_alignBottom="@id/btSend"
-        android:gravity="top"
-        android:hint="@string/message_hint"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:imeOptions="actionSend"/>
-   </RelativeLayout>
+        <Button
+            android:id="@+id/btSend"
+            style="@style/button_standard"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentBottom="true"
+            android:gravity="center"
+            android:text="@string/send"
+            android:textSize="18sp"/>
+
+        <EditText
+            android:id="@+id/etMessage"
+            android:layout_width="match_parent"
+            android:layout_height="180dp"
+            android:layout_alignBottom="@id/btSend"
+            android:layout_toLeftOf="@id/btSend"
+            android:gravity="bottom"
+            android:hint="@string/message_hint"
+            android:imeOptions="actionSend"/>
+    </RelativeLayout>
 
 
-</RelativeLayout>
+</LinearLayout>
