--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -244,22 +244,25 @@
     <!-- Event List page -->
 
     <style name="EventList.Text" parent="">
-        <item name="android:padding">10dp</item>
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_weight">1</item>
-        <item name="fontPath">fonts/RobotoCondensed.ttf</item>
+        <item name="fontPath">fonts/RobotoCondensed-Regular.ttf</item>
         <item name="android:textColor">@color/colorPrimaryText</item>
     </style>
 
     <style name="EventList.Date" parent="EventList.Text">
-        <item name="android:textSize">@dimen/conv_text_big</item>
+        <item name="android:textSize">22sp</item>
 
         <item name="android:textStyle">bold</item>
     </style>
 
     <style name="EventList.EventName" parent="EventList.Text">
-        <item name="android:textSize">22dp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:paddingLeft">20dp</item>
+        <item name="android:paddingRight">20dp</item>
+        <item name="android:paddingBottom">5dp</item>
+        <item name="android:textSize">18sp</item>
         <item name="android:textStyle">italic</item>
     </style>
 
